# toktoken

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: release.yml  tests.yml
docs/: ARCHITECTURE.md  ASSESSMENT.md  CONFIGURATION.md  LANGUAGES.md  LLM.md  PERFORMANCE.md  SECURITY.md  TOKEN_SAVINGS.md  rules-template.md
docs/setup/: claude-code.md  windsurf.md
src/: arena.c  cli.c  cli.h  cmd_bundle.c  cmd_bundle.h  cmd_find.c  cmd_find.h  cmd_help.c  cmd_help.h  cmd_index.c  cmd_index.h  cmd_inspect.c  cmd_inspect.h  cmd_manage.c  cmd_search.c  cmd_suggest.c  cmd_suggest.h  cmd_update.c  config.c  config.h  ctags_stream.c  ctags_stream.h  ctags_stream_win.c  file_filter.c  file_filter.h  github.h  hashmap.c  import_extractor.c  index_pipeline.c  index_pipeline.h  index_pipeline_win.c  index_store.c  index_store.h  language_detector.c  main.c  mcp_log.c  mcp_log.h  mcp_server.c  mcp_tools.c  parser_blade.c  (+21 more)
tests/: test_cli.c  test_compat.h  test_config.c  test_e2e_full_find.c  test_e2e_full_helpers.h  test_e2e_full_imports.c  test_e2e_full_index.c  test_e2e_full_inspect.c  test_e2e_full_langs.c  test_e2e_full_manage.c  test_e2e_full_search.c  test_e2e_helpers.h  test_e2e_main.c  test_edge_cases.c  test_helpers.c  test_import_extractor.c  test_int_commands.c  test_int_ctags_stream.c  test_int_file_filter.c  test_int_github.c  test_int_manage.c  test_int_mcp_server.c  test_int_multilang.c  test_int_parser_blade.c  test_int_parser_razor.c  test_int_parser_twig.c  test_int_pipeline.c  test_int_platform.c  test_int_resolve.c  test_int_savings.c  test_int_storage.c  test_int_v020.c  test_integration_main.c  test_language_detector.c  test_mcp_log.c  test_path_validator.c  test_storage_paths.c  test_str_util.c  test_symbol_kind.c  test_unit_main.c  (+1 more)
tests/fixtures/blade-project/resources/views/edge/: components.blade.php  dedup.blade.php  verbatim.blade.php
tests/fixtures/blade-project/resources/views/layouts/: app.blade.php
tests/fixtures/blade-project/resources/views/pages/: dashboard.blade.php
tests/fixtures/full-project/: cycle_a.py  cycle_b.py  orphan.py  package.json
tests/fixtures/full-project/src/bash/: deploy.sh
tests/fixtures/full-project/src/blade/: Page.blade.php
tests/fixtures/full-project/src/c/: engine.c  engine.h  main.c
tests/fixtures/full-project/src/cpp/: app.cpp  utils.hpp
tests/fixtures/full-project/src/csharp/: Program.cs
tests/fixtures/full-project/src/csharp/Services/: DataService.cs
tests/fixtures/full-project/src/dart/: widget.dart
tests/fixtures/full-project/src/elixir/: worker.ex
tests/fixtures/full-project/src/gdscript/: enemy.gd
tests/fixtures/full-project/src/gleam/: server.gleam
tests/fixtures/full-project/src/go/: main.go
tests/fixtures/full-project/src/go/handlers/: api.go
tests/fixtures/full-project/src/graphql/: schema.graphql
tests/fixtures/full-project/src/haskell/: Main.hs
tests/fixtures/full-project/src/haskell/Lib/: Parser.hs
tests/fixtures/full-project/src/hcl/: infrastructure.tf
tests/fixtures/full-project/src/java/: Application.java
tests/fixtures/full-project/src/java/service/: OrderService.java
tests/fixtures/full-project/src/js/: index.js  middleware.js  router.js
tests/fixtures/full-project/src/julia/: simulation.jl
tests/fixtures/full-project/src/kotlin/: Main.kt
tests/fixtures/full-project/src/kotlin/data/: Store.kt
tests/fixtures/full-project/src/lua/: game.lua
tests/fixtures/full-project/src/markdown/: guide.md
tests/fixtures/full-project/src/nix/: package.nix
tests/fixtures/full-project/src/perl/: processor.pl
tests/fixtures/full-project/src/php/: Controller.php
tests/fixtures/full-project/src/php/Data/: Repository.php
tests/fixtures/full-project/src/php/Service/: UserService.php
tests/fixtures/full-project/src/python/: analyzer.py  main.py  models.py
tests/fixtures/full-project/src/r/: analysis.r
tests/fixtures/full-project/src/razor/: Page.cshtml
tests/fixtures/full-project/src/ruby/: app.rb  helpers.rb
tests/fixtures/full-project/src/rust/: config.rs  main.rs
tests/fixtures/full-project/src/scala/: App.scala
tests/fixtures/full-project/src/scala/service/: Processor.scala
tests/fixtures/full-project/src/sql/: schema.sql
tests/fixtures/full-project/src/swift/: ViewController.swift
tests/fixtures/full-project/src/ts/: app.ts  service.ts  types.ts
tests/fixtures/full-project/src/twig/: Page.html.twig
tests/fixtures/full-project/src/vue/: Dashboard.vue
tests/fixtures/imports/: app.js
tests/fixtures/razor-project/Views/: Home.cshtml
tests/fixtures/twig-project/templates/: base.html.twig
tests/fixtures/twig-project/templates/edge/: dynamic.html.twig  lists.html.twig  verbatim.html.twig
tests/fixtures/twig-project/templates/macros/: forms.html.twig
tests/fixtures/twig-project/templates/pages/: dashboard.html.twig  imports.html.twig
